--- a/test/Main.storyboard
+++ b/test/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fjf-fX-zP4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fjf-fX-zP4">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -335,18 +335,21 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1bO-Zu-tNh">
                                 <rect key="frame" x="0.0" y="466" width="300" height="134"/>
                                 <state key="normal" title="Button"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yoe-lU-yeS">
-                                <rect key="frame" x="300" y="466" width="300" height="134"/>
-                                <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="next:" destination="nfg-XC-aux" eventType="touchUpInside" id="S9S-fv-U6b"/>
+                                    <action selector="nextUser:" destination="nfg-XC-aux" eventType="touchUpInside" id="s8f-ec-rma"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vCp-mh-mgH" customClass="YTPlayerView">
                                 <rect key="frame" x="0.0" y="198" width="600" height="268"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yoe-lU-yeS">
+                                <rect key="frame" x="300" y="466" width="300" height="134"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="like:" destination="nfg-XC-aux" eventType="touchUpInside" id="yQe-Mo-gxI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -397,11 +400,42 @@
                         <outlet property="descriptionView" destination="jNh-ha-UOI" id="omq-af-YHJ"/>
                         <outlet property="playerView" destination="vCp-mh-mgH" id="htP-bW-1Ti"/>
                         <outlet property="sex" destination="mgL-YK-9p4" id="crY-AQ-eml"/>
+                        <segue destination="koW-bh-fn9" kind="show" id="IMS-fa-TyZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="72R-Bl-9Ts" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="875" y="-424"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7ft-Vn-af9">
+            <objects>
+                <viewController id="koW-bh-fn9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SqZ-ZE-PKw"/>
+                        <viewControllerLayoutGuide type="bottom" id="Grw-tu-bEE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g7R-bB-7cU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="J0V-bz-Ay8">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="J0V-bz-Ay8" firstAttribute="leading" secondItem="g7R-bB-7cU" secondAttribute="leading" id="LgR-e2-20e"/>
+                            <constraint firstAttribute="trailing" secondItem="J0V-bz-Ay8" secondAttribute="trailing" id="grS-Mb-uRr"/>
+                            <constraint firstItem="J0V-bz-Ay8" firstAttribute="top" secondItem="SqZ-ZE-PKw" secondAttribute="bottom" id="hfc-vi-AGe"/>
+                            <constraint firstItem="Grw-tu-bEE" firstAttribute="top" secondItem="J0V-bz-Ay8" secondAttribute="bottom" id="mVr-DT-dGs"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uzX-7L-d9M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1619" y="-421"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jwb-7O-gco">
